Update activity Tahun dan mainactivity

--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".Splashscreen">
 
     <RelativeLayout
@@ -14,8 +15,8 @@
 
         <ImageView
             android:background="@drawable/keluargasehat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="160dp"
+            android:layout_height="140dp">
 
         </ImageView>
 
