--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,8 +4,8 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/mhealth</item>
-        <item name="colorAccent">@color/mhealth</item>
+        <item name="colorPrimaryDark">@color/kelaurgasehat</item>
+        <item name="colorAccent">@color/kelaurgasehat</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
