--- a/app/src/main/res/drawable/bottom_nav_selector.xml
+++ b/app/src/main/res/drawable/bottom_nav_selector.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="true"
         android:state_pressed="true"
-        android:color="@color/mhealth" />
+        android:color="@color/kelaurgasehat" />
 
 </selector>
