--- a/app/src/main/res/drawable/roundedbutton.xml
+++ b/app/src/main/res/drawable/roundedbutton.xml
@@ -3,14 +3,14 @@
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="24dp" />
-            <solid android:color="#4CAF50"/>
+            <solid android:color="#30AD35"/>
 
         </shape>
     </item>
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="24dp" />
-            <solid android:color="#4CAF50"/>
+            <solid android:color="#30AD35"/>
         </shape>
     </item>
     <item >
