--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,6 @@
             android:text="Silahkan login untuk melanjutkan"
             android:textColor="#FFFFFFFF"
             android:textSize="18sp">
-
         </TextView>
 
     </LinearLayout>
@@ -52,11 +51,11 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
             android:background="@drawable/keluargasehat"
-            android:layout_width="135dp"
-            android:layout_height="128dp">
+            android:layout_width="130dp"
+            android:layout_height="120dp">
 
         </ImageView>
 
@@ -69,8 +68,8 @@
             android:layout_marginRight="30dp"
             android:orientation="vertical">
 
-
             <android.support.design.widget.TextInputLayout
+                app:hintEnabled="false"
                 android:id="@+id/textInputLayoutNIK"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -78,6 +77,7 @@
                 app:errorEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
+                    android:fontFamily="@font/opensansregular"
                     android:id="@+id/editTextNIK"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -88,6 +88,8 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:layout_marginTop="20dp"
+                app:hintEnabled="false"
                 android:id="@+id/textInputLayoutPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -96,6 +98,7 @@
                 app:passwordToggleTint="#494949">
 
                 <android.support.design.widget.TextInputEditText
+                    android:fontFamily="@font/opensansregular"
                     android:id="@+id/editTextPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -112,7 +115,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="40dp"
                 android:background="@drawable/roundedbutton"
                 android:fontFamily="@font/opensansbold"
                 android:text="@string/login"
