--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,17 +9,17 @@
     tools:context=".Login">
 
     <LinearLayout
-        android:orientation="vertical"
         android:id="@+id/linear1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textview1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:fontFamily="@font/opensansbold"
             android:text="Selamat Pagi,"
@@ -38,79 +38,77 @@
             android:fontFamily="@font/opensansregular"
             android:text="Silahkan login untuk melanjutkan"
             android:textColor="#FFFFFFFF"
-            android:textSize="18sp">
-        </TextView>
+            android:textSize="18sp"></TextView>
 
     </LinearLayout>
 
     <RelativeLayout
-        android:background="@drawable/relativerounded"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/linear1">
+        android:layout_below="@+id/linear1"
+        android:background="@drawable/relativerounded">
 
         <ImageView
             android:id="@+id/image"
-            android:layout_marginTop="30dp"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/keluargasehat"
             android:layout_width="130dp"
-            android:layout_height="120dp">
+            android:layout_height="120dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/keluargasehat">
 
         </ImageView>
 
         <LinearLayout
-            android:layout_marginTop="30dp"
-            android:layout_below="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/image"
             android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
             android:layout_marginRight="30dp"
             android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
-                app:hintEnabled="false"
                 android:id="@+id/textInputLayoutNIK"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                app:errorEnabled="true">
+                app:errorEnabled="true"
+                app:hintEnabled="false">
 
                 <android.support.design.widget.TextInputEditText
-                    android:fontFamily="@font/opensansregular"
                     android:id="@+id/editTextNIK"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                     android:drawablePadding="10dp"
+                    android:fontFamily="@font/opensansregular"
                     android:hint="Username"
                     android:inputType="textEmailAddress" />
+
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:layout_marginTop="20dp"
-                app:hintEnabled="false"
                 android:id="@+id/textInputLayoutPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 app:errorEnabled="true"
+                app:hintEnabled="false"
                 app:passwordToggleEnabled="true"
                 app:passwordToggleTint="#494949">
 
                 <android.support.design.widget.TextInputEditText
-                    android:fontFamily="@font/opensansregular"
                     android:id="@+id/editTextPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_lock_black_24dp"
                     android:drawablePadding="10dp"
+                    android:fontFamily="@font/opensansregular"
                     android:hint="@string/password"
                     android:inputType="textPassword" />
             </android.support.design.widget.TextInputLayout>
 
             <Button
-                android:textSize="18sp"
-                android:textAllCaps="false"
                 android:id="@+id/buttonLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -119,7 +117,9 @@
                 android:background="@drawable/roundedbutton"
                 android:fontFamily="@font/opensansbold"
                 android:text="@string/login"
-                android:textColor="@android:color/white" />
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
