--- a/app/src/main/res/layout/activity_pilih_tahun.xml
+++ b/app/src/main/res/layout/activity_pilih_tahun.xml
@@ -1,27 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_centerInParent="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
     android:orientation="vertical"
-    android:background="#FFF5F5F5"
     tools:context=".PilihTahun">
 
-    <Spinner
+    <android.support.v7.widget.CardView
+        app:cardCornerRadius="4dp"
+        android:layout_margin="30dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/listItem"
-        android:entries="@array/tahun"
-        android:padding="15dp">
+        android:layout_height="wrap_content">
 
-    </Spinner>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <Button
-        android:textAllCaps="false"
-        android:id="@+id/submit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pilih"/>
+            <TextView
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
+                android:textColor="#4CAF50"
+                android:text="Tahun"
+                android:fontFamily="@font/opensansbold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </TextView>
+
+            <Spinner
+                android:textAlignment="center"
+                android:id="@+id/listItem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:entries="@array/tahun"
+                android:padding="15dp">
+
+            </Spinner>
+
+            <Button
+                android:layout_margin="20dp"
+                android:textColor="@android:color/white"
+                android:fontFamily="@font/opensanssemibold"
+                android:id="@+id/submit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/roundedbutton"
+                android:text="Pilih"
+                android:textAllCaps="false" />
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
